[gd_scene load_steps=20 format=2]

[ext_resource path="res://1chardemo/r1char.png" type="Texture" id=1]
[ext_resource path="res://1chardemo/ur2char.png" type="Texture" id=2]
[ext_resource path="res://1chardemo/d3char.png" type="Texture" id=3]
[ext_resource path="res://1chardemo/dr2char.png" type="Texture" id=4]
[ext_resource path="res://1chardemo/dr1char.png" type="Texture" id=5]
[ext_resource path="res://1chardemo/r2char.png" type="Texture" id=6]
[ext_resource path="res://1chardemo/ur3char.png" type="Texture" id=7]
[ext_resource path="res://1chardemo/d2char.png" type="Texture" id=8]
[ext_resource path="res://1chardemo/u2char.png" type="Texture" id=9]
[ext_resource path="res://1chardemo/dr3char.png" type="Texture" id=10]
[ext_resource path="res://1chardemo/u3char.png" type="Texture" id=11]
[ext_resource path="res://1chardemo/ur1char.png" type="Texture" id=12]
[ext_resource path="res://1chardemo/r3char.png" type="Texture" id=13]
[ext_resource path="res://1chardemo/u1char.png" type="Texture" id=14]
[ext_resource path="res://1chardemo/d1char.png" type="Texture" id=15]
[ext_resource path="res://player1demo.gd" type="Script" id=21]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 13 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 9 ), ExtResource( 14 ), ExtResource( 11 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 10 ) ],
"loop": true,
"name": "downright",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 8 ), ExtResource( 15 ), ExtResource( 3 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 2 ), ExtResource( 12 ), ExtResource( 7 ) ],
"loop": true,
"name": "upright",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 30.0
height = 88.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 32.0
height = 84.0

[node name="player1demo" type="KinematicBody2D"]
collision_layer = 5
collision_mask = 5
script = ExtResource( 21 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 5, 5 )
frames = SubResource( 1 )
animation = "down"
speed_scale = 1.5

[node name="walkarea" type="CollisionShape2D" parent="."]
light_mask = 3
position = Vector2( 0, 4 )
shape = SubResource( 2 )

[node name="hitbox" type="KinematicBody2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 2

[node name="hitboxshape" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 0, 4 )
shape = SubResource( 3 )

[node name="HealthCooldown" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="HealthRegen" type="Timer" parent="."]

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="Dash_Length" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Dash_Cooldown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Stamina_Regen" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="HealthCooldown" to="." method="_on_HealthCooldown_timeout"]
[connection signal="timeout" from="HealthRegen" to="." method="_on_HealthRegen_timeout"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
[connection signal="timeout" from="Dash_Cooldown" to="." method="_on_Dash_Cooldown_timeout"]
[connection signal="timeout" from="Stamina_Regen" to="." method="_on_Stamina_Regen_timeout"]
